--- a/style.css
+++ b/style.css
@@ -1,21 +1,23 @@
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 .container {
     display: flex;
-    background-color: rgb(27, 172, 224);
-    width: 100vw;
     height: 100vh;
+    width: 100vw;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    gap: 15px;
-}    
-
-#pokemonimage, #pokemonimageshiny{
-    width: 300px;
-    height: 300px;
 }
+
+.search-box {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+
+
